--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,6 +1,11 @@
 .large-hero {
 	position: relative;
+	border-bottom: 10px solid $mainBlue;
 
+	&__image {
+		display: block;
+	}
+	
 	&__text-content {
 		position: absolute;
 		top: 50%;
@@ -13,18 +18,10 @@
 	&__title {
 			font-weight: 300;
 			color: $mainBlue;
-			font-size: 1.1rem;
+			font-size: 2.4rem;
 			margin: 0;
 			
 			@mixin atSmall {
-			font-size: 2.0rem;
-		}
-		
-		@mixin atMedium {
-			font-size: 3.2rem;
-		}
-		
-		@mixin atLarge {
 			font-size: 4.8rem;
 		}
 		
@@ -34,45 +31,26 @@
 	&__subtitle {
 		font-weight: 300;
 		color: $mainBlue;
-		font-size: 0.8rem;
+		font-size: 1.5rem;
 		margin: 0;
 		
 		@mixin atSmall {
-			font-size: 1.6rem;
+			font-size: 2.9rem;
 		}
-		
-		@mixin atMedium {
-			font-size: 2.2rem;
-		}
-		
-		@mixin atLarge {
-			font-size: 3.1rem;
-		}
-		
-		
 	}
 
 	&__description {
 		font-weight: 100;
 		color: #FFF;
-		font-size: 0.9rem;
+		font-size: 1.1rem;
 		text-shadow: 2px 2px 0 rgba(0,0,0,.1);
-		max-width: 35rem;
+		max-width: 30rem;
 		margin-left: auto;
 		margin-right: auto;
 		
 			@mixin atSmall {
-			font-size: 1.1rem;
+			font-size: 1.875rem;
 		}
-		
-		@mixin atMedium {
-			font-size: 1.7rem;
-		}
-		
-		@mixin atLarge {
-			font-size: 2.1rem;
-		}
-		
 	}
 
 }
